--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>ROBO.X TECHNOLOGY</title>
+  <link rel="icon" type="image/x-icon" href="/img/logo.png">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,10 +14,20 @@
     <h1>ROBO.X TECHNOLOGY</h1>
     <nav class="nav">
       <ul class="nav-list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li class="dropdown">
+          <a href="#contact" id="contactDropdownBtn">Contact Us &#9662;</a>
+          <ul class="dropdown-menu">
+            <li><a href="https://wa.me/+201025370914" target="_blank" rel="noopener noreferrer">Whatsapp</a></li>
+            <li><a href="https://wa.me/+201009907236" target="_blank" rel="noopener noreferrer">Other Number</a></li>
+            <li><a href="https://www.facebook.com/2sfhschool" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+
+            
+           
+          </ul>
+        </li>
       </ul>
       <button class="nav-toggle" aria-label="Toggle navigation">
         <span class="bar"></span>
@@ -26,12 +38,55 @@
   </div>
 </header>
 
-<section class="hero container">
+<main class="main-wrapper">
+  <section class="glass-box hero">
   <p>Welcome to our cutting-edge robotics platform.</p>
   <a href="#">Learn More</a>
   <br><br>
-  <button>Get Started</button>
+
+  <!-- Custom Glassy Carousel Start -->
+  <div class="custom-carousel">
+    <input type="radio" name="carousel" id="slide1" checked>
+    <input type="radio" name="carousel" id="slide2">
+    <input type="radio" name="carousel" id="slide3">
+    <input type="radio" name="carousel" id="slide4">
+
+    <div class="carousel-slides">
+      <div class="carousel-slide slide1">
+        <img src="https://cdn.josetxu.com/img/gp-fisura-saqueadores.jpg" alt="Slide 1">
+        <div class="carousel-caption">Industrial Robotics</div>
+      </div>
+      <div class="carousel-slide slide2">
+        <img src="https://cdn.josetxu.com/img/gp-lucas-hueso.jpg" alt="Slide 2">
+        <div class="carousel-caption">Automation Solutions</div>
+      </div>
+      <div class="carousel-slide slide3">
+        <img src="https://cdn.josetxu.com/img/gp-blues-ojos-bonitos-tres-coronas.jpg" alt="Slide 3">
+        <div class="carousel-caption">AI Integration</div>
+      </div>
+      <div class="carousel-slide slide4">
+        <img src="https://cdn.josetxu.com/img/gp-perros-salvajes-gran-molondrio.jpg" alt="Slide 4">
+        <div class="carousel-caption">Precision Engineering</div>
+      </div>
+    </div>
+
+    <div class="carousel-controls">
+      <label for="slide1"></label>
+      <label for="slide2"></label>
+      <label for="slide3"></label>
+      <label for="slide4"></label>
+    </div>
+  </div>
+  <!-- Custom Glassy Carousel End -->
+
+  <br>
+  <a href="services.html" >
+  <button>Request Service</button>
+  <!-- ...existing code... -->
+  </a>
 </section>
+
+</main>
 
 <footer class="footer">
   <div class="container">
@@ -39,12 +94,47 @@
   </div>
 </footer>
 
+<!-- Contact Modal -->
+
+
 <script>
 // Responsive nav toggle
 const navToggle = document.querySelector('.nav-toggle');
 const navList = document.querySelector('.nav-list');
 navToggle.addEventListener('click', () => {
   navList.classList.toggle('nav-list--open');
+});
+
+// Dropdown menu
+const contactDropdownBtn = document.getElementById('contactDropdownBtn');
+const dropdownMenu = document.querySelector('.dropdown-menu');
+const dropdown = document.querySelector('.dropdown');
+
+contactDropdownBtn.addEventListener('click', function(e) {
+  e.preventDefault();
+  dropdownMenu.classList.toggle('show');
+});
+
+document.addEventListener('click', function(e) {
+  if (!dropdown.contains(e.target)) {
+    dropdownMenu.classList.remove('show');
+  }
+});
+
+// Contact Modal
+const contactBtn = document.getElementById('contactBtn');
+const contactModal = document.getElementById('contactModal');
+const closeModal = document.getElementById('closeModal');
+contactBtn.addEventListener('click', () => {
+  contactModal.style.display = 'flex';
+});
+closeModal.addEventListener('click', () => {
+  contactModal.style.display = 'none';
+});
+window.addEventListener('click', (e) => {
+  if (e.target === contactModal) {
+    contactModal.style.display = 'none';
+  }
 });
 </script>
 </body>
