--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="img/ugv.jpg" alt="Slide 1">
         </div>
         <div class="carousel-slide slide2">
-          <img src="img/robotics.jpg" alt="Slide 2">
+          <img src="img/armservice.jpg" alt="Slide 2">
         </div>
         <div class="carousel-slide slide3">
           <img src="img/solartrackingsystem.jpg" alt="Slide 3">
