--- a/about.html
+++ b/about.html
@@ -46,12 +46,12 @@
     <div class="engineers-list">
       <div class="engineer-card">
         <img src="img/engkhaledelneklawi.jpeg" alt="Engineer John Doe" class="engineer-photo">
-        <h3>Eng: Khaled Elnaklawi</h3>
+        <h3>Eng: Khaled Elneklawy</h3>
         <p>CEO & Founder<br>
          Mechatronics engineer</p>
       </div>
       <div class="engineer-card ">
-        <img src="img/engineer2.jpg" alt="Engineer Jane Smith" class="engineer-photo">
+        <img src="img/engahmedsamir.png" alt="Engineer Jane Smith" class="engineer-photo">
         <h3>Eng: Ahmed Samir</h3>
         <p>CEO & Founder<br>
          Mechatronics engineer</p>
