--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
 <main class="main-wrapper">
   <section class="glass-box about-hero">
-    <h2>About Our Team</h2>
+    <h2>About Us</h2>
     <p>
       ROBO.X TECHNOLOGY is powered by a team of industrial-grade robotic engineers dedicated to innovation and excellence. Our engineers have decades of combined experience in designing, building, and deploying advanced robotics solutions for manufacturing, logistics, and automation.
     </p>
