--- a/products.html
+++ b/products.html
@@ -3,7 +3,8 @@
   <meta charset="UTF-8">
   <title>ROBO.X TECHNOLOGY</title>
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Industrial robots, UGVs, PCB design, 3D printing, laser cutting, repair, and solar tracking systems for Egyptian industry.">
+  <meta name="keywords" content="Robotics Egypt, Industrial Robots, Mechatronics Egypt, Automation, UGV, PCB Design, 3D Printing, Laser Cutting, Robot Repair, Solar Tracking, Engineering Egypt, Cairo Robotics, Egyptian Robotics Company, Smart Rescue Buoy, Manufacturing Automation, Electronic Design, Cairo, Egypt, ROBO.X Technology">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
