--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <title>About | ROBO.X TECHNOLOGY</title>
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Industrial robots, UGVs, PCB design, 3D printing, laser cutting, repair, and solar tracking systems for Egyptian industry.">
+<meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Industrial robots, UGVs, PCB design, 3D printing, laser cutting, repair, and solar tracking systems for Egyptian industry.">
   <meta name="keywords" content="Robotics Egypt, Industrial Robots, Mechatronics Egypt, Automation, UGV, PCB Design, 3D Printing, Laser Cutting, Robot Repair, Solar Tracking, Engineering Egypt, Cairo Robotics, Egyptian Robotics Company, Smart Rescue Buoy, Manufacturing Automation, Electronic Design, Cairo, Egypt, ROBO.X Technology">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,7 +13,7 @@ meta name="description" content="ROBO.X Technology - Egypt's leading robotics en
 <header class="header">
   <div class="container header-content">
     <img src="img/logo.png" alt="ROBO.X Logo" class="logo">
-    <h1>ROBO.X TECHNOLOGY</h1>
+    <h1>ROBO.X TECHNOLOGY/about</h1>
     <nav class="nav">
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
