--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
     
     <div class="product-card">
       <div class="product-image">
-        <img src="img/3dprinting.jpg" alt="Industrial Robotics">
+        <img src="img/industrialrobots.jpeg" alt="Industrial Robotics">
       </div>
       <div class="product-info">
         <h3>Industrial Robotics</h3>
