--- a/about.html
+++ b/about.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <title>About | ROBO.X TECHNOLOGY</title>
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Industrial robots, UGVs, PCB design, 3D printing, laser cutting, repair, and solar tracking systems for Egyptian industry.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Meet our expert team of engineers and learn about our mission in robotics and automation.">
   <meta name="keywords" content="Robotics Egypt, Industrial Robots, Mechatronics Egypt, Automation, UGV, PCB Design, 3D Printing, Laser Cutting, Robot Repair, Solar Tracking, Engineering Egypt, Cairo Robotics, Egyptian Robotics Company, Smart Rescue Buoy, Manufacturing Automation, Electronic Design, Cairo, Egypt, ROBO.X Technology">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 <header class="header">
   <div class="container header-content">
     <img src="img/logo.png" alt="ROBO.X Logo" class="logo">
-    <h1>ROBO.X TECHNOLOGY/about</h1>
+    <h1>ROBO.X TECHNOLOGY</h1>
     <nav class="nav">
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
@@ -41,29 +42,89 @@
 </header>
 
 <main class="main-wrapper">
-  <section class="glass-box about-hero">
-    <h2>About Us</h2>
-    <p>
-      ROBO.X TECHNOLOGY is powered by a team of industrial-grade robotic engineers dedicated to innovation and excellence. Our engineers have decades of combined experience in designing, building, and deploying advanced robotics solutions for manufacturing, logistics, and automation.
-    </p>
-    <div class="engineers-list">
-      <div class="engineer-card">
-        <img src="img/engkhaledelneklawi.jpeg" alt="Engineer John Doe" class="engineer-photo">
-        <h3>Eng: Khaled Elneklawy</h3>
-        <p>CEO & Founder<br>
-         Mechatronics engineer</p>
+  <!-- About Hero Section -->
+  <section class="about-hero-section">
+    <div class="container">
+      <h2 class="section-title">About Us</h2>
+      <div class="about-content">
+        <div class="about-text">
+          <p class="lead-text">
+            ROBO.X TECHNOLOGY is Egypt's premier robotics and automation solutions provider, powered by a team of industrial-grade robotic engineers dedicated to innovation and excellence.
+          </p>
+          <div class="about-features">
+            <div class="feature">
+              <i class="fas fa-robot"></i>
+              <h3>Innovation</h3>
+              <p>Pushing the boundaries of robotics technology</p>
+            </div>
+            <div class="feature">
+              <i class="fas fa-cogs"></i>
+              <h3>Expertise</h3>
+              <p>Decades of combined engineering experience</p>
+            </div>
+            <div class="feature">
+              <i class="fas fa-industry"></i>
+              <h3>Solutions</h3>
+              <p>Custom automation for every industry</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="engineer-card ">
-        <img src="img/engahmedsamir.png" alt="Engineer Jane Smith" class="engineer-photo">
-        <h3>Eng: Ahmed Samir</h3>
-        <p>CEO & Founder<br>
-         Mechatronics engineer</p>
-      </div>
-      
     </div>
-    <p>
-      Our mission is to deliver reliable, scalable, and intelligent robotic solutions for industries worldwide.
-    </p>
+  </section>
+
+  <!-- Team Section -->
+  <section class="team-section">
+    <div class="container">
+      <h2 class="section-title">Our Leadership</h2>
+      <div class="engineers-list">
+        <div class="engineer-card">
+          <div class="engineer-photo-wrapper">
+            <img src="img/engkhaledelneklawi.jpeg" alt="Eng. Khaled Elneklawy" class="engineer-photo">
+          </div>
+          <div class="engineer-info">
+            <h3>Eng. Khaled Elneklawy</h3>
+            <span class="position">CEO & Founder</span>
+            <span class="specialty">Mechatronics Engineer</span>
+            <div class="engineer-social">
+              <a href="https://www.linkedin.com/in/khaled-s-elneklawy-%D8%AE%D8%A7%D9%84%D8%AF-%D8%A7%D9%84%D8%B3%D9%8A%D8%AF-%D8%A7%D9%84%D9%86%D9%83%D9%84%D8%A7%D9%88%D9%8A-8a5030213?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " class="social-link"><i class="fab fa-linkedin"></i></a>
+              <a href="https://x.com/ElnklawyKhaled?t=MC19ySCb1XD9Ous671dq2A&s=09" class="social-link"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="engineer-card">
+          <div class="engineer-photo-wrapper">
+            <img src="img/engahmedsamir.png" alt="Eng. Ahmed Samir" class="engineer-photo">
+          </div>
+          <div class="engineer-info">
+            <h3>Eng. Ahmed Samir</h3>
+            <span class="position">CEO & Founder</span>
+            <span class="specialty">Mechatronics Engineer</span>
+            <div class="engineer-social">
+              <a href="https://www.linkedin.com/in/ahmed-samir-007b7126b/" class="social-link"><i class="fab fa-linkedin"></i></a>
+      
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Mission Section -->
+  <section class="mission-section">
+    <div class="container">
+      <div class="mission-content">
+        <h2 class="section-title">Our Mission</h2>
+        <div class="mission-card">
+          <i class="fas fa-rocket mission-icon"></i>
+          <p class="mission-text">
+            To revolutionize industries through innovative robotics and automation solutions, 
+            delivering reliable, scalable, and intelligent systems that empower businesses 
+            across Egypt and beyond.
+          </p>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
 
