--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ROBO.X TECHNOLOGY</title>
+  <title>ROBO.X TECHNOLOGY - Leading Robotics & Automation Solutions in Egypt</title>
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Industrial robots, UGVs, PCB design, 3D printing, laser cutting, repair, and solar tracking systems for Egyptian industry.">
+  <meta name="description" content="ROBO.X Technology - Egypt's leading robotics engineering, automation, and mechatronics company. Industrial robots, UGVs, PCB design, 3D printing, laser cutting, repair, and solar tracking systems for Egyptian industry.">
   <meta name="keywords" content="Robotics Egypt, Industrial Robots, Mechatronics Egypt, Automation, UGV, PCB Design, 3D Printing, Laser Cutting, Robot Repair, Solar Tracking, Engineering Egypt, Cairo Robotics, Egyptian Robotics Company, Smart Rescue Buoy, Manufacturing Automation, Electronic Design, Cairo, Egypt, ROBO.X Technology">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 <header class="header">
@@ -39,10 +40,16 @@
 </header>
 
 <main class="main-wrapper">
-  <section class="glass-box hero">
-    <p>Welcome to our cutting-edge robotics platform.</p>
-    <a href="#">Learn More</a>
-    <br><br>
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="hero-content">
+      <h2 class="hero-title">Innovating the Future of Robotics</h2>
+      <p class="hero-subtitle">Egypt's Leading Robotics & Automation Solutions Provider</p>
+      <div class="hero-buttons">
+        <a href="services.html" class="cta-button primary">Explore Services</a>
+        <a href="training.html" class="cta-button secondary">Join Our Training</a>
+      </div>
+    </div>
 
     <!-- Custom Glassy Carousel Start -->
     <div class="custom-carousel">
@@ -53,16 +60,20 @@
 
       <div class="carousel-slides">
         <div class="carousel-slide slide1">
-          <img src="img/ugv.jpg" alt="Slide 1">
+          <img src="img/ugv.jpg" alt="Unmanned Ground Vehicle">
+          <div class="slide-caption">Advanced UGV Solutions</div>
         </div>
         <div class="carousel-slide slide2">
-          <img src="img/armservice.jpg" alt="Slide 2">
+          <img src="img/armservice.jpg" alt="Robotic Arm Service">
+          <div class="slide-caption">Industrial Robotics</div>
         </div>
         <div class="carousel-slide slide3">
-          <img src="img/solartrackingsystem.jpg" alt="Slide 3">
+          <img src="img/solartrackingsystem.jpg" alt="Solar Tracking System">
+          <div class="slide-caption">Smart Energy Systems</div>
         </div>
         <div class="carousel-slide slide4">
-          <img src="img/repair.jpg" alt="Slide 4">
+          <img src="img/repair.jpg" alt="Repair Services">
+          <div class="slide-caption">Expert Maintenance</div>
         </div>
       </div>
 
@@ -73,18 +84,104 @@
         <label for="slide4"></label>
       </div>
     </div>
-    <!-- Custom Glassy Carousel End -->
+  </section>
 
-    <br>
-    <a href="services.html">
-      <button>Request Service</button>
-    </a>
+  <!-- Features Section -->
+  <section class="features-section">
+    <div class="container">
+      <div class="features-grid">
+        <div class="feature-card">
+          <i class="fas fa-robot"></i>
+          <h3>Industrial Automation</h3>
+          <p>State-of-the-art robotics solutions for manufacturing and industrial applications</p>
+        </div>
+        <div class="feature-card">
+          <i class="fas fa-microchip"></i>
+          <h3>PCB Design</h3>
+          <p>Custom electronic solutions and circuit board design for your specific needs</p>
+        </div>
+        <div class="feature-card">
+          <i class="fas fa-cube"></i>
+          <h3>3D Printing</h3>
+          <p>Rapid prototyping and manufacturing with cutting-edge 3D printing technology</p>
+        </div>
+        <div class="feature-card">
+          <i class="fas fa-graduation-cap"></i>
+          <h3>Training Programs</h3>
+          <p>Professional training courses in robotics, automation, and electronics</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Stats Section -->
+  <section class="stats-section">
+    <div class="container">
+      <div class="stats-grid">
+        <div class="stat-card">
+          <span class="stat-number">500+</span>
+          <span class="stat-label">Projects Completed</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-number">20+</span>
+          <span class="stat-label">Industry Partners</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-number">500+</span>
+          <span class="stat-label">Students Trained</span>
+        </div>
+        <div class="stat-card">
+          <span class="stat-number">5+</span>
+          <span class="stat-label">Years Experience</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Location Section -->
+  <section class="location-section">
+    <div class="container">
+      <h2 class="section-title">Find Us</h2>
+      <div class="location-grid">
+        <div class="map-container">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.1238612888274!2d29.926653313285954!3d31.206999655912163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c47f76c8e4e3%3A0x5212437375ca4e4c!2sROBO.X%20Technology!5e0!3m2!1sen!2seg!4v1690389825244!5m2!1sen!2seg"
+            width="100%" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+        <div class="contact-info">
+          <div class="info-card">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3>Address</h3>
+            <p>5 Abd Al Kader Al Mazeni St.</p>
+            <p>Al Ibrahimiyyah, Alexandria, Egypt</p>
+          </div>
+          <div class="info-card">
+            <i class="fas fa-phone"></i>
+            <h3>Phone</h3>
+            <p>+20 102 537 0914</p>
+            <p>+20 100 990 7236</p>
+          </div>
+          <div class="info-card">
+            <i class="fas fa-clock"></i>
+            <h3>Working Hours</h3>
+            <p>Open Every Day</p>
+            <p>12:00 PM - 12:00 AM</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
 
 <footer class="footer">
   <div class="container">
-    &copy; 2025 ROBO.X Technology. All rights reserved.
+    &copy; 2025 ROBO.X Technology. All rights reserved.<br>
   </div>
 </footer>
 
