--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
 <header class="header">
   <div class="container header-content">
     <img src="img/logo.png" alt="ROBO.X Logo" class="logo">
-    <h1>ROBO.X TECHNOLOGY/products</h1>
+    <h1>ROBO.X TECHNOLOGY</h1>
     <nav class="nav">
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
