--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.1238612888274!2d29.926653313285954!3d31.206999655912163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c47f76c8e4e3%3A0x5212437375ca4e4c!2sROBO.X%20Technology!5e0!3m2!1sen!2seg!4v1690389825244!5m2!1sen!2seg"
             width="100%" 
-            height="450" 
+            height="100%" 
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy"
