--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
                         <span><i class="fas fa-check"></i> Multiple Materials</span>
                     </div>
                 </div>
-                <div class="service-card" data-service="3">
+                <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-bolt"></i>
                     </div>
