--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
                         <span><i class="fas fa-check"></i> Quality Testing</span>
                     </div>
                 </div>
-                <div class="service-card" data-service="2">
+                <div class="service-card" >
                     <div class="service-icon">
                         <i class="fas fa-cube"></i>
                     </div>
