--- a/products.html
+++ b/products.html
@@ -42,20 +42,9 @@
         <section class="services glass-box" id="services">
   <h2>Our Products</h2>
   <div class="products-grid">
-    
     <div class="product-card">
       <div class="product-image">
-        <img src="img/industrialrobots.jpeg" alt="Industrial Robotics">
-      </div>
-      <div class="product-info">
-        <h3>Industrial Robotics</h3>
-        <p>High-performance robotic arms and automation solutions for factories and production lines.</p>
-      </div>
-    </div>
-
-    <div class="product-card">
-      <div class="product-image">
-        <img src="img/ugv.jpg" alt="UGV Robots">
+        <img src="img/industrialrobots.jpeg" alt="UGV Robots">
       </div>
       <div class="product-info">
         <h3>UGV Robots</h3>
